--- a/css/juego.css
+++ b/css/juego.css
@@ -6,14 +6,17 @@ body {
   min-height: 100%;
   background-image: url(../images/adventure.jpg);
 }
+
 ul {
   padding-left: 0;
   list-style: none;
 }
+
 li {
   padding: 5px 0;
   animation: fadein 5s;
 }
+
 li::before {
   content: "• ";
   color: #EC6778;
@@ -24,11 +27,13 @@ li::before {
   color: #E84A5F;
 }
 
-.col-40, .col-60 {
+.col-40,
+.col-60 {
   display: table-cell;
   margin: 0;
   vertical-align: top;
 }
+
 .col-40 {
   background: #FFF;
   padding: 30px;
@@ -40,7 +45,20 @@ li::before {
 
 }
 
-#flecha{
+#juego {
+  background-color: #2ad19a;
+  width: 600px;
+  height: 600px;
+}
+
+#juego .piezasMoviles img{
+  border: solid 3.3% #00000000;
+  height: 30%;
+  width: 30%;
+  float: left;
+}
+
+#flecha {
   font-size: 60px;
 }
 
@@ -54,6 +72,11 @@ li::before {
 }
 
 @keyframes fadein {
-  from { opacity: 0; }
-  to   { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
 }
